--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mockjs2": "1.0.8",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "v-viewer": "^1.5.1",
     "viser-vue": "^2.4.6",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
